<resources>
    <string name="app_name">Time Work</string>
    <string name="title_activity_landing_page">Home</string>
    <string name="About_text">Designed and developed by Ganesh Prasad P | 2016</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="action_settings">Settings</string>

    <!--Routine Alert dialog string constants-->
    <string name="dialog_routine_title">Add Routine event</string>
    <string name="dialog_routine_positive_btn">Save</string>
    <string name="event_name">Event Name</string>
    <string name="repeat_string">Repeat</string>

    <!--Array for the spinner in create routine-->
    <string-array name="type_create_routine">
        <item>Hobbies</item>
        <item>Personal</item>
        <item>Work</item>
    </string-array>
    <string-array name="time_size">
        <item>Less</item>
        <item>More</item>
        <item>A lot</item>
    </string-array>
    <string name="title_activity_task_page">TaskPageActivity</string>
    <string name="task_name">Task name</string>
    <string name="select_date">Select Date</string>
    <string name="pick_time">Select Time</string>
    <string name="type_of_routine">Type of routine</string>
    <string name="type_of_task">Type of task</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="notify">Notify</string>
    <string name="task_desc_time">Time of task</string>
    <string name="task_desc_date">Task date</string>
    <string name="Tasks_h1">Tasks</string>
    <string name="routines_title">Routines</string>
    <string name="hobby">Hobby</string>
    <string name="personal">Personal</string>
    <string name="work">Work</string>
    <string name="no_tasks">No Tasks Today. Yay!</string>

</resources>
