<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              android:layout_width="match_parent"
              android:layout_height="match_parent"
              xmlns:app="http://schemas.android.com/apk/res-auto"
              android:layout_marginTop="24dp"
              android:background="@color/white"
              android:orientation="vertical">

    <android.support.design.widget.AppBarLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:fitsSystemWindows="true"
        android:theme="@style/AppTheme.AppBarOverlay">

        <android.support.v7.widget.Toolbar
            android:id="@+id/toolbar_task_dialog_fragment"
            android:layout_width="match_parent"
            android:layout_height="?attr/actionBarSize"
            android:background="?attr/colorPrimary"
            app:popupTheme="@style/AppTheme.PopupOverlay"/>

    </android.support.design.widget.AppBarLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:padding="16dp">

        <android.support.design.widget.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="16dp"
            android:paddingStart="8dp">

            <EditText
                android:id="@+id/task_name_task_dialog_fragment"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/task_name"/>

        </android.support.design.widget.TextInputLayout>

        <Spinner
            android:id="@+id/spinner_type_task_dialog_fragment"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="16dp"
            android:paddingStart="8dp"/>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="48dp"
            android:id="@+id/select_date_task_dialog_fragment"
            android:clickable="true"
            android:text="@string/select_date"
            android:gravity="center"
            android:textAppearance="?android:textAppearanceLarge"/>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="48dp"
            android:id="@+id/select_time_task_dialog_fragment"
            android:clickable="true"
            android:text="@string/pick_time"
            android:gravity="center"
            android:textAppearance="?android:textAppearanceLarge"/>

        <CheckBox
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="Remind"
            android:textAppearance="?android:textAppearanceMedium"
            android:id="@+id/reminder_task_dialog_fragment"/>

    </LinearLayout>
</LinearLayout>